# pyCoyote

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  flake.nix  pyproject.toml
examples/01_hello_world/: main.py
examples/02_hls_vadd/: main.py
examples/03_multitenancy/: main.py
examples/04_user_interrupts/: main.py
examples/05_reconfigure_shell/: main.py
examples/06_gpu_p2p/: main.py
examples/07_perf_fpga/: main.py
examples/08_multithreading/: main.py
examples/09_perf_rdma/: client.py  server.py
nix/: mkPyCoyotePackage.nix
pycoyote/: __init__.py
pycoyote/cpp/include/: cBufferWrapper.hpp  cPythonLibs.hpp  cRcnfgWrapper.hpp  cThreadWrapper.hpp
pycoyote/cpp/src/: cBufferWrapper.cpp  cPythonLibs.cpp  cRcnfgWrapper.cpp  cThreadWrapper.cpp
pycoyote/py/: coyote_buffer.py
